# yafc

./: .gitignore  README  overview.xoj
cl-srv/: yafc-srv.asd
cl-srv/src/: history.lisp  package.lisp  server.lisp  task-queue.lisp  yafc-server.lisp
cpp-srv/: CMakeLists.txt  chatsession.cpp  chatsession.h  chatuser.cpp  chatuser.h  cmdproc.cpp  cmdproc.h  ptr_test.cpp  roomlist.cpp  roomlist.h  sendable.cpp  sendable.h  server.cpp  server.h  userlist.cpp  userlist.h  yafcd.cpp
py-tst/: simple_test.py
qt-client/: Client.pro  chatsession.cpp  chatsession.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
